Hotfix verificatore glossario

--- a/docs/esterni/glossario/glossario.tex
+++ b/docs/esterni/glossario/glossario.tex
@@ -21,7 +21,7 @@ Questo documento riporta i termini specifici del dominio per i quali viene richi
 \addversione{0.0.4}{09/06/2023}{Salami Lorenzo}{Ceccato Francesco}{Aggiunti nuovi vocaboli derivanti dall'\textit{Analisi dei requisiti}}
 \addversione{0.1.0}{20/07/2023}{Soldà Matteo}{Alberti Nicolas}{Verifica del documento per RTB}
 \addversione{1.0.0}{20/07/2023}{Soldà Matteo}{Alberti Nicolas}{Approvazione del documento per candidatura RTB}
-\addversione{1.0.1}{15/08/2023}{Alberti Nicolas}{}{Modificato l'indice del glossario inserendo le lettere al posto dei numeri.}
+\addversione{1.0.1}{15/08/2023}{Alberti Nicolas}{Soldà Matteo}{Modificato l'indice del glossario inserendo le lettere al posto dei numeri.}
 
 
 \begin{document}
