--- a/docs/interni/verbali/2023_08_14_I/2023_08_14_I.tex
+++ b/docs/interni/verbali/2023_08_14_I/2023_08_14_I.tex
@@ -7,7 +7,7 @@
 
 \settitolo{Verbale del 14/08/2023}
 \setredattori{Brotto Romina}
-\setrevisori{}
+\setrevisori{Soldà Matteo}
 \setdestuso{interno}
 \setdescrizione{
     Verbale dell'incontro del 14/08/2023
