Aggiunto revisori e sistemato typo

--- a/docs/esterni/verbali/2023_08_16_E/2023_08_16_E.tex
+++ b/docs/esterni/verbali/2023_08_16_E/2023_08_16_E.tex
@@ -7,7 +7,7 @@
 
 \settitolo{Verbale Consuntivo dello Scambio di Messaggi con Imola Informatica}
 \setredattori{Soldà Matteo}
-\setrevisori{}
+\setrevisori{Brotto Romina\\Cavaliere Erica}
 \setdestuso{esterno}
 \setdescrizione{
     Verbale Consuntivo dello Scambio di Messaggi con Imola Informatica
@@ -36,7 +36,7 @@
 \end{itemize}
 
 \section*{Introduzione}
-Durante lo sviluppo del meccanismo che automatizza l'accensione dei lampioni al rilevamento di movimento da parte del sensore, il gruppo ha riscontrato delle incertezze riguardo la modalità di interazione le varie componenti del sistema. Per questo motivo, il gruppo ha contattato il proponente tramite Telegram per chiarire i dubbi.
+Durante lo sviluppo del meccanismo che automatizza l'accensione dei lampioni al rilevamento di movimento da parte del sensore, il gruppo ha riscontrato delle incertezze riguardo la modalità di interazione delle varie componenti del sistema. Per questo motivo, il gruppo ha contattato il proponente tramite Telegram per chiarire i dubbi.
 Nella visione del gruppo, seguendo anche quanto riportato nell'\textit{Analisi dei Requisiti V1.0.0}, emergono le seguenti informazioni:
 \begin{itemize}
     \item Il sensore tra i suoi attributi, ne ha uno che indica il tipo di interazione (\textit{pull / push}) che ha con il sistema;
