--- a/docs/esterni/glossario/glossario.tex
+++ b/docs/esterni/glossario/glossario.tex
@@ -22,6 +22,7 @@ Questo documento riporta i termini specifici del dominio per i quali viene richi
 \addversione{0.1.0}{20/07/2023}{Soldà Matteo}{Alberti Nicolas}{Verifica del documento per RTB}
 \addversione{1.0.0}{20/07/2023}{Soldà Matteo}{Alberti Nicolas}{Approvazione del documento per candidatura RTB}
 \addversione{1.0.1}{15/08/2023}{Alberti Nicolas}{Soldà Matteo}{Modificato l'indice del glossario inserendo le lettere al posto dei numeri.}
+\addversione{1.0.2}{22/08/2023}{Soldà Matteo}{}{Aggiunta parola al glossatio, lettera J.}
 
 
 \begin{document}
@@ -89,6 +90,12 @@ utilizzare software aggiuntivi per la collaborazione, quali:
 \textbf{Implementazione:} realizzazione concreta di una procedura a partire dalla sua definizione logica. \\ \\
 \textbf{Intensità luminosa:} quantità di luce prodotta da un \textit{impianto luminoso\textsubscript{G}}. \\ \\
 \textbf{Interfaccia:} dispositivo di collegamento con cui un software assicura la comunicazione tra due sistemi altrimenti incompatibili, oppure tra unità centrali e periferiche. \\ \\
+
+\newpage
+\section*{J.}
+\markboth{J.}{}
+\addcontentsline{toc}{section}{J.}
+\textbf{JWT - JSON Web Token:} standard per la creazione di dati dove la firma e la cifratura sono opzionali. Il payload di questo token può essere cifrato utilizzando una chiave private e/o una chiave pubblica.
 
 \newpage
 \section*{L.}
