Fix typo e aggiunto revisore

--- a/docs/interni/verbali/2023_08_21_I/2023_08_21_I.tex
+++ b/docs/interni/verbali/2023_08_21_I/2023_08_21_I.tex
@@ -7,7 +7,7 @@
 
 \settitolo{Verbale del 21/08/2023}
 \setredattori{Soldà Matteo}
-\setrevisori{}
+\setrevisori{Cavaliere Erica}
 \setdestuso{interno}
 \setdescrizione{
     Verbale dell'incontro del 21/08/2023
@@ -59,7 +59,7 @@ Per il codice presente nella repository LumosMinima-code:
 \begin{itemize}
     \item Matteo si occuperà dell'implementazione della modifica della luminosità temporizzata per le aree illuminate (issue \#11);
     \item Erica e Francesco procederanno con gli unit test (issue \#1);
-    \item Matteo e Francesco di occuperanno del meccanismo di login (issue \#5).
+    \item Matteo e Francesco si occuperanno del meccanismo di login (issue \#5).
 \end{itemize}
 
 \end{document}
