--- a/docs/esterni/glossario/glossario.tex
+++ b/docs/esterni/glossario/glossario.tex
@@ -23,7 +23,7 @@ Questo documento riporta i termini specifici del dominio per i quali viene richi
 \addversione{1.0.0}{20/07/2023}{Soldà Matteo}{Alberti Nicolas}{Approvazione del documento per candidatura RTB}
 \addversione{1.0.1}{15/08/2023}{Alberti Nicolas}{Soldà Matteo}{Modificato l'indice del glossario inserendo le lettere al posto dei numeri.}
 \addversione{1.0.2}{22/08/2023}{Soldà Matteo}{Cavaliere Erica}{Aggiunta parola al glossatio, lettera J.}
-\addversione{1.0.3}{24/08/2023}{Soldà Matteo}{}{Aggiunte parole al glossario, lettera P. e T. }
+\addversione{1.0.3}{24/08/2023}{Soldà Matteo}{Alberti Nicolas}{Aggiunte parole al glossario, lettera P. e T. }
 
 
 \begin{document}
