Close #109 - Stesura Verbale Esterno (#110)
* Stesura verbale esterno

* aggiornamento glossario

* Fix alla data, aggiunta Revisore

* aggiunto revisore

---------

Co-authored-by: nicolasalberti00 <75423237+nicolasalberti00@users.noreply.github.com>

--- a/docs/esterni/glossario/glossario.tex
+++ b/docs/esterni/glossario/glossario.tex
@@ -22,7 +22,8 @@ Questo documento riporta i termini specifici del dominio per i quali viene richi
 \addversione{0.1.0}{20/07/2023}{Soldà Matteo}{Alberti Nicolas}{Verifica del documento per RTB}
 \addversione{1.0.0}{20/07/2023}{Soldà Matteo}{Alberti Nicolas}{Approvazione del documento per candidatura RTB}
 \addversione{1.0.1}{15/08/2023}{Alberti Nicolas}{Soldà Matteo}{Modificato l'indice del glossario inserendo le lettere al posto dei numeri.}
-\addversione{1.0.2}{22/08/2023}{Soldà Matteo}{}{Aggiunta parola al glossatio, lettera J.}
+\addversione{1.0.2}{22/08/2023}{Soldà Matteo}{Cavaliere Erica}{Aggiunta parola al glossatio, lettera J.}
+\addversione{1.0.3}{24/08/2023}{Soldà Matteo}{Alberti Nicolas}{Aggiunte parole al glossario, lettera P. e T. }
 
 
 \begin{document}
@@ -113,8 +114,10 @@ utilizzare software aggiuntivi per la collaborazione, quali:
 \section*{P.}
 \markboth{P.}{}
 \addcontentsline{toc}{section}{P.}
+\textbf{Parsing:} processo di analisi di un flsso di dati in ingresso per determinare la correttenza della sua struttura ad una data grammatica formale. \\ \\
 \textbf{Piano di Progetto:} calendario di massima di un progetto riportante la stima dei costi di realizzazione, dei rischi attesi e della loro mitigazione e infine della suddivisione del lavoro in molteplici periodi successivi. Per ogni periodo devono essere riportati i seguenti elementi: obiettivi attesi, obiettivi raggiunti, rischi occorsi, conseguenze e mitigazione, costi osservati e aggiornamento del calendario futuro e della stima dei costi finali. \\ \\
 \textbf{Piano di Qualifica:} specifica gli obiettivi quantitativi di qualità di prodotto e di processo, oltre a misurare il raggiungimento di tali obiettivi allo stato corrente pone le fondamenta per retrospettive e iniziative di auto-miglioramento. \\ \\
+\textbf{Polling Time:} indica il tempo che intercorre tra una operazione e l'altra che si svolgono in loop. Essa può essere seguita da una lettura o scrittura. \\ \\
 \textbf{Processo:} insieme di attività correlate e coese che trasformano bisogni (input) in prodotti (output) secondo regole date, utilizzando risorse nel farlo. \\ \\
 \textbf{Push/Pull:} In ambito web application, il push si riferisce alla comunicazione in cui il server invia attivamente i dati o gli aggiornamenti al client senza che vengano richiesti esplicitamente. Il pull, invece, implica che il client richieda esplicitamente i dati o gli aggiornamenti al server quando ne ha bisogno. Il push è utilizzato per aggiornamenti in tempo reale, mentre il pull viene utilizzato per richieste specifiche del client. \\ \\
 
@@ -146,6 +149,7 @@ nella repository del progetto.\\ \\
 \textbf{Ticketing:} è il metodo con cui si rappresentano tutte le attività di
 progetto: è composto di più \textit{ticket\textsubscript{G}}, che permettono una visualizzazione rapida ed
 efficace di ogni incarico effettuato dai membri del gruppo. \\ \\
+\textbf{Token:} blocco di testo categorizzato da lessemi e che richiede il \textit{parsing\textsubscript{G}}
 \newpage
 \section*{V.}
 \markboth{V.}{}
