fixati problemi di merge e aggiunte img

--- a/docs/esterni/piano_di_progetto/piano_di_progetto.tex
+++ b/docs/esterni/piano_di_progetto/piano_di_progetto.tex
@@ -936,8 +936,8 @@ N.B.: il gruppo ha preso atto che alcuni sprint potranno essere meno produttivi 
 \begin{itemize}
     \item Nulla da segnalare.
 \end{itemize}
-%\includegraphics[scale=0.178]{RTB_9.png}\newline
-%\newline
+\includegraphics[scale=0.178]{RTB_10e11.png}\newline
+\newline
 \begin{center}
 	\begin{tabularx}{\textwidth}{|X|X|X|X|}
 		\hline
@@ -1011,8 +1011,8 @@ N.B.: il gruppo ha preso atto che alcuni sprint potranno essere meno produttivi 
 \begin{itemize}
     \item Nulla da segnalare.
 \end{itemize}
-%\includegraphics[scale=0.178]{RTB_9.png}\newline
-%\newline
+\includegraphics[scale=0.178]{RTB_10e11.png}\newline
+\newline
 \begin{center}
 	\begin{tabularx}{\textwidth}{|X|X|X|X|}
 		\hline
@@ -1068,6 +1068,8 @@ N.B.: il gruppo ha preso atto che alcuni sprint potranno essere meno produttivi 
 	\mbox{}\\
 \end{center}
 
+\newpage
+
 \subsubsection{Sprint 13}
 \textbf{Data di inizio:} 12/08/2023\newline
 \textbf{Data di fine:} 21/08/2023\newline
@@ -1084,8 +1086,8 @@ N.B.: il gruppo ha preso atto che alcuni sprint potranno essere meno produttivi 
 \begin{itemize}
     \item Nulla da segnalare.
 \end{itemize}
-%\includegraphics[scale=0.178]{RTB_9.png}\newline
-%\newline
+\includegraphics[scale=0.178]{PB_1.png}\newline
+\newline
 \begin{center}
 	\begin{tabularx}{\textwidth}{|X|X|X|X|}
 		\hline
