--- a/docs/interni/verbali/2023_08_28_I/2023_08_28_I.tex
+++ b/docs/interni/verbali/2023_08_28_I/2023_08_28_I.tex
@@ -7,7 +7,7 @@
 
 \settitolo{Verbale del 28/08/2023}
 \setredattori{Brotto Romina}
-\setrevisori{}
+\setrevisori{Soldà Matteo}
 \setdestuso{interno}
 \setdescrizione{
     Verbale dell'incontro del 28/08/2023
@@ -53,12 +53,12 @@ Per la documentazione in LumosMinima:
 \begin{itemize}
     \item Romina si occupa di aggiornare le \textit{Norme di Progetto} (issue \#94);
     \item Lorenzo ultimerà il \textit{Piano di Qualifica} (issue \#96);
-    \item Nicolas si pccuperà di stendere una versione di base della Specifica Architetturale e della Specifica Tecnica (issues \#106 - \#107).
+    \item Nicolas si occuperà di stendere una versione di base della Specifica Architetturale e della Specifica Tecnica (issues \#106 - \#107).
 \end{itemize}
 
 Per il codice presente nella repository LumosMinima-code:
 \begin{itemize}
-    \item Si procede con il controllo dell'operatività delle funzionalità implememtate;
+    \item Si procede con il controllo dell'operatività delle funzionalità implementate;
     \item Si procede con gli unit test.
 \end{itemize}
 
