--- a/docs/interni/Norme_di_Progetto/norme_di_progetto.tex
+++ b/docs/interni/Norme_di_Progetto/norme_di_progetto.tex
@@ -28,7 +28,7 @@ Questo documento contiene le procedure, gli strumenti e i criteri di qualità ch
 \addversione{0.0.11}{24/07/2023}{Soldà Matteo}{Ceccato Francesco}{Inserite norme di codifica}
 \addversione{0.1.0}{24/07/2023}{Ceccato Francesco}{Brotto Romina}{Verifica documento per RTB}
 \addversione{1.0.0}{24/07/2023}{Soldà Matteo}{Ceccato Francesco}{Approvazione documento per RTB}
-\addversione{1.0.1}{31/08/2023}{Brotto Romina}{}{Aggiunta sezioni mancanti}
+\addversione{1.0.1}{31/08/2023}{Brotto Romina}{Soldà Matteo}{Aggiunta sezioni mancanti}
 
 \begin{document}
 \makeindexdetails
@@ -507,11 +507,11 @@ Attività che permette di verificare la presenza di lacune nel codice, oltre che
 
 
 \subsection{Gestione di Qualità}
-Le metriche di gestione di qualità vengono descritte nel \textit{Piano di Qualifica}. Sono istituite per fornire le linee guida affinchè il prodotto si avaluitabile in termini di qualità. Di seguito erranno descritte le singole metriche impiegate per monitorare l'andamento del prodotto.
+Le metriche di gestione di qualità vengono descritte nel \textit{Piano di Qualifica}. Sono istituite per fornire le linee guida affinchè il prodotto si valutabile in termini di qualità. Di seguito verranno descritte le singole metriche impiegate per monitorare l'andamento del prodotto.
 
 \subsubsection{Documentazione}
 \begin{itemize}
-    \item \textbf{Indice di Gulpease}: Indice di leggibilità del testo, applicato a tutti i documenti.
+    \item \textbf{Indice di Gulpease}: indice di leggibilità del testo, applicato a tutti i documenti.
 \end{itemize}
 
 \subsubsection{Prodotti Software} 
